JUnit hozzáadása + egy példa teszteset

--- a/LogSim/nbproject/project.properties
+++ b/LogSim/nbproject/project.properties
@@ -26,11 +26,13 @@ dist.jar=${dist.dir}/LogSim.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.junit-4.8.2.jar=lib/junit-4.8.2.jar
 file.reference.LogSim-src=src
 file.reference.LogSim-test=test
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -41,7 +43,6 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
