--- a/LogSim/nbproject/project.properties
+++ b/LogSim/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=hu.override.LogSim
+main.class=hu.override.logsim.LogSim
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
