Proto hozzáadása, ami igazából a Skeleton felturbózása, majd inkább át kell másolni a Skeletonba.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ LogSimSkeleton/build/
 LogSimSkeleton/documents/
 LogSimSkeleton/dist/
 LogSimSkeleton/nbproject/private/
+LogSimProto/build/
+LogSimProto/dist/
+LogSimProto/nbproject/private/
 doc/*.log
 doc/*.ps
 doc/*.toc
